syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mafei.model";

message BalanceCheckRequest {
    int32 account_number = 1;
}

message BalanceResponse {
    int32 amount = 1;
    string currency = 2;
}
/*
this is the service that we need to get
the balance of the account by passing account number
*/
service BankService {
    rpc GetBalance(BalanceCheckRequest) returns (BalanceResponse);
}