syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mafei.model";


message TransferRequest {
    int32 from_account = 1;
    int32 to_account = 2;
    int32 amount = 3;
}

message Account {
    int32 account_number = 1;
    int32 amount = 2;
}


enum TransferStatus {
    TRANSFER_STATUS_FAILED = 0;
    TRANSFER_STATUS_SUCCESS = 1;
}

message TransferResponse {
    TransferStatus transfer_status = 1;
    repeated Account accounts = 2;
}

service BidirectionalBankService {
    rpc Transfer(stream TransferRequest) returns (stream TransferResponse);
}